platilla de la pagina

--- a/index.html
+++ b/index.html
@@ -1,11 +1,67 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>PYthon</title>
 </head>
+
 <body>
-    
+    <header class="header">
+
+        <div class="grande">
+            <div class="imgD"><img class="img" src="img/logo1.png" alt="logo"></div>
+            <div class="tituloD">
+                <h1 class="titulo">INTRODUCCION A PYTHON</h1>
+            </div>
+        </div>
+        <section class="menu">
+
+            <!--                <div class="imgD1"><img class=" img2" src="img/logo.png" alt="logo"></div> -->
+            <div class="Python divCaja" id="python">
+                <h2>Python</h2>
+            </div>
+
+            <div class="vs divCaja" id="vs">
+                <h2>Programacion estructurada Vs POO</h2>
+            </div>
+            <div class="lenguajes divCaja" id="leguajes">
+                <h2>Lenguajes usados</h2>
+            </div>
+
+            <div class="definiciones divCaja" id="definiciones">
+                <h2>Definiciones</h2>
+            </div>
+            <div class="bibliografia divCaja" id="bibliografia">
+                <h2>Bibliografia</h2>
+            </div>
+        </section>
+
+    </header>
+
+    <main>
+      
+        <div class="containerMostrar">
+
+           <article>
+               <h2>iframes</h2>
+               <iframe src="html/frame.html" frameborder="0" class="iframe"></iframe>
+           </article>
+
+        </div>
+
+    </main>
+
+
+    <footer>
+        <div class="by">
+            <span>
+                <h2 class="nombres">camilo holman</h2>
+            </span>
+        </div>
+    </footer>
 </body>
+
 </html>
