arreglos de todo2

--- a/index.html
+++ b/index.html
@@ -130,7 +130,13 @@
     <footer>
         <div class="by">
             <span>
-                <h2 class="nombres">camilo holman</h2>
+                <h2 class="creado">Creado por:</h2>
+                <div class="COnnombres">
+                    <h2 class="nombres "> Jeyson camilo Guzman Rico</h2>
+                    <h2 class="nombres erw">Holwan David Montes Gutierrez</h2>
+                </div>
+                
+
             </span>
         </div>
     </footer>
