--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                 <p>Una propiedad es un identificador con un determinado tipo de dato que accede normalmente a un campo
                     en forma directa o a través de un método.</p>
             </div>
-            <div class="imgp">
+            <div class="imgp" id="Logo">
                 <img src="img/logo.png" alt="">
             </div>
             <div>
@@ -201,6 +201,13 @@
                     formas de diseñar un lenguaje de programación y varios modos de trabajar para obtener los resultados
                     que necesitan los programadores.</p>
             </div>
+            <div class="ejer" id="ejer">
+                <img src="img/ejercicio.PNG" alt="">
+            </div>
+            
+        </div>
+        <div class="conteQuinto" id="present">
+            <img src="img/presentacion.jpg" alt="">
         </div>
 
         <div class="containerMostrar">
